Going on: webdev page, typography, ...

--- a/index.html
+++ b/index.html
@@ -80,30 +80,25 @@
 		</h2>
 		
 		<p>
-			I am a full stack web developer/programmer with a focus on <em>front end engineering</em> 
-			with Web Standard. <a href="#skills"><em>More</em></a>.
+			I am a full stack web developer with a focus on <em>front end engineering</em>. 
 		</p>
 		
-		<!--height="64" -->
-		<div id="techno-logos">
-			<p style="text-align: left;">
-				<a href="http://www.w3.org/html/logo/">
-					<img 
-						src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-graphics-multimedia-performance-semantics-storage.png" 
-						width="200" 
-						
-						alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage" 
-						title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage"
-					>
-				</a>
+		<p id="techno-logos">
+			<a href="http://www.w3.org/html/logo/">
 				<img 
-					src="img/jquery-logo.png" 
-					alt="jQuery logo" 
-					title="jQuery logo"
-					width="200"
+					src="http://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-device-graphics-multimedia-performance-semantics-storage.png" 
+					width="200" 
+					alt="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage" 
+					title="HTML5 Powered with Connectivity / Realtime, CSS3 / Styling, Device Access, Graphics, 3D &amp; Effects, Multimedia, Performance &amp; Integration, Semantics, and Offline &amp; Storage"
 				>
-			</p>
-		<div>
+			</a>
+			<img 
+				src="img/jquery-logo.png" 
+				alt="jQuery logo" 
+				title="jQuery logo"
+				width="100"
+			>
+		</p>
 		
 		<div id="portfolio">  
 			<h3 class="heading">
