--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 	<div id="webdev" class="page">
 		<h2>
 			Web Development
-			<q>“Computers are useless. They can only give you answers.”</q>,
-			<cite>Picasso</cite>
+			<q>Computers are useless. They can only give you answers</q><cite>, Picasso</cite>
 		</h2>
 		
 		<p>
@@ -103,8 +102,7 @@
 		<div id="portfolio">  
 			<h3 class="heading">
 				Portfolio
-				<q>“Because a code snippet is worth 1e4 words.”</q>,
-				<cite>mgiulio</cite>
+				<q>Because a code snippet is worth 1e4 words</q><cite>, mgiulio</cite>
 			</h3>
 			<ul>
 				<li><a href="https://github.com/mgiulio/jquery-lifestream">jQuery Lifestream plugin</a></li>
