Internal linking with hashchange

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 			</p>
 			<cite>"Vehicle dynamics - theory and applications", ...</cite>
 		</blockquote>
+		
+		<p id="about-foo">#about-foo</p>
 	</div>
 	
 	<div id="webdev" class="page">
@@ -135,7 +137,13 @@
 			<a href="http://twitter.com/mgiulio">tweet me</a> a message
 			or meet me on some <a href="#lifestream">social network I frequent</a>.
 		</p>
-		.</p>
+		<p>
+			<a href="#about">A link to another page</a>
+			<a href="#foo">A link to this page</a>
+			<a href="#about-foo">Alink inside another page</a>
+			<a href=""></a>
+		</p>
+		<p id="foo">I'm a foo paragraph.</p>
 		<!--
 		<form action="contact.php" method="post"> 
 			<div id="form-inner"> 
@@ -158,6 +166,7 @@
 	<script>!window.jQuery && document.write('<script src="http://code.jquery.com/jquery-1.6.2.min.js"><\/script>');</script>
 	<script src="js/jquery.lifestream.js"></script>
 	<script src="js/jquery.fullpgbgimg.js"></script>
+	<script src="js/jquery.ba-hashchange.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
