Modify portfolio, show PromoteJs

--- a/index.html
+++ b/index.html
@@ -114,17 +114,11 @@
 				<q>Because a code snippet is worth 1e4 words</q><cite>, mgiulio</cite>
 			</h3>
 			<ul>
-				<li><a href="https://github.com/mgiulio/jquery-lifestream">jQuery Lifestream plugin</a></li>
-				<li><a href="index.html">This site</a></li>
-				<!--
-				<li><a href="#">DNDfaves</a></li>
-				<li><a href="#">iPad slideshow</a></li>
-				<li><a href="#">jQuery Wallpaper plugin</a></li>
-				-->
+				<li><a href="https://mgiulio.github.com">mgiulio.github.com</a></li>
 			</ul>
 		</div>
 		
-		<div style="text-align:center; display: none;">
+		<div style="text-align:center;">
 			<a href='https://developer.mozilla.org/en/javascript' title='JavaScript'>
 				<img src='http://static.jsconf.us/promotejsh.gif' height='150' width='180' alt='JavaScript'/>
 			</a>
