Fix github link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<q>Because a code snippet is worth 1e4 words</q><cite>, mgiulio</cite>
 			</h3>
 			<ul>
-				<li><a href="https://mgiulio.github.com">mgiulio.github.com</a></li>
+				<li><a href="http://mgiulio.github.com">mgiulio.github.com</a></li>
 			</ul>
 		</div>
 		
